# amplifier

providers/: README.md
providers/deepseek/: README.md  pyproject.toml
providers/deepseek/amplifier_module_provider_deepseek/: __init__.py
providers/doubao/: README.md  pyproject.toml
providers/doubao/amplifier_module_provider_doubao/: __init__.py
providers/qwen/: README.md  pyproject.toml
providers/qwen/amplifier_module_provider_qwen/: __init__.py
