[project]
name = "amplifier-module-provider-deepseek"
version = "0.1.0"
description = "DeepSeek provider module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Amplifier Team" },
]
dependencies = [
    "amplifier-core",
    "httpx",
    "pydantic",
]

[project.entry-points."amplifier.modules"]
provider-deepseek = "amplifier_module_provider_deepseek:module"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true
